Fixing overlapping issue with tweet footer buttons.

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -485,6 +485,10 @@ button.navbar-toggle.noBorder {
     right: 0;
 }
 
+.tweetFooterSpacer {
+    height: 18px;
+}
+
 .retweetedStatus {
     color: #989898;
 }
